# cfmock

./: .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  bumpversion.cfg  requirements.txt  setup.cfg  setup.py
cfmock/: __init__.py  __main__.py
cwmock/: __init__.py  __main__.py
dynomock/: __init__.py  __main__.py
dynomock/core/: __init__.py
dynomock/mocks/: mocks.json
tests/: test.json  test_cfmock.py  test_dynomock.py
