[bdist_wheel]
universal = 1

[check-manifest]
ignore = tests/*
[metadata]
name = cwmock
description = commandline werkzeug endpoint mocker.
version = 0.2.3
long_description = Commandline werkzeug endpoint mocker
url = https://github.com/vit0r/cwmock
author = Vitor
author_email = vitornascimentoaraujo@gmail.com
license = MIT
include_package_data = True
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
py_modules = cwmock
zip_safe = False

[files]
packages = cwmock

[nosetests]
nologcapture = 1

