[bdist_wheel]
universal = 1

[check-manifest]
ignore = tests/*
[metadata]
name = dynomock
description = endpoints mocker.
version = 0.2.4
long_description = dynomock mock apis endpoints
url = https://github.com/vit0r/dynomock
author = Vitor
author_email = vitornascimentoaraujo@gmail.com
license = MIT
include_package_data = True
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
py_modules = dynomock
zip_safe = False

[files]
packages = dynomock

[nosetests]
nologcapture = 1

