[bdist_wheel]
universal = 1

[check-manifest]
ignore = tests/*
[metadata]
name = dynomock
description = endpoints mocker.
version = 0.2.0
long_description = dynomock mock apis endpoints
url = https://github.com/vit0r/dynomock
author = Vitor
author_email = vitornascimentoaraujo@gmail.com
license = MIT
include_package_data = True
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
py_modules = dynomock
zip_safe = False

[files]
packages = dynomock

[nosetests]
nologcapture = 1

